baml_language/crates/baml_tests/snapshots/compiles/anyfunction_reflect/baml_tests__compiles__anyfunction_reflect__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Doc {
  title: string
}
class user.ToolError {
  message: string
}
function user.bare_and_pinned() -> int  [expr] {
  { let f: baml.AnyFunction = web_search; let g: baml.AnyFunction<Returns = user.Doc[] | string, Throws = user.ToolError> = web_search; let widened: baml.AnyFunction<Returns = user.Doc[] | string | int, Throws = user.ToolError> = g; let bare: baml.AnyFunction = g; return 0 }
}
function user.current_time() -> string  [expr] {
  { return "now" }
}
function user.heterogeneous_tool_map() -> map<string, baml.AnyFunction<Returns = user.Doc[] | string, Throws = user.ToolError>>  [expr] {
  { return map { "search": web_search, "now": current_time } }
}
function user.signature_access(f: baml.AnyFunction) -> string  [expr] {
  { let sig = reflect.signature(f); let parts = sig.returns.to_string() Add sig.errors.to_string() Add sig.args.length().to_string(); for arg in sig.args { parts = parts Add arg.name Add arg.type.to_string() }; for key in sig.opts.keys() { let opt = sig.opts.get(key) } if (opt Ne null) { parts = parts Add key Add opt.type.to_string() }; return parts }
}
function user.typed_dispatch(name: string, args: map<string, unknown>) -> user.Doc[] | string  [expr] {
  { let tools = heterogeneous_tool_map(); let f = tools.get(name); if (f is null) { return "no-such-tool" }; return reflect.call_any(f, args) catch (e) { user.ToolError => "tool-error:" Add e.message, reflect.InvalidArgumentError => "bad-args" } }
}
function user.web_search(q: string) -> user.Doc[]  [expr] {
  { if (q Eq "boom") { throw user.ToolError { message: "no results" } }; return [user.Doc { title: q }] }
}
