baml_language/crates/baml_tests/snapshots/compiles/anyfunction_reflect/baml_tests__compiles__anyfunction_reflect__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 3575
---
=== MIR2 ===
fn user.web_search(q: string) -> Doc[] {
    // Locals:
    let _0: Doc[] // _0 // return
    let _1: string // q // param
    let _2: bool
    let _3: ToolError
    let _4: Doc

    bb0: {
        _2 = copy _1 == const "boom";
        branch copy _2 -> [bb3, bb1];
    }

    bb1: {
        _4 = user.Doc { copy _1 };
        _0 = [copy _4]: Doc[];
        goto -> bb2;
    }

    bb2: {
        return;
    }

    bb3: {
        _3 = user.ToolError { const "no results" };
        throw copy _3;
    }
}

fn user.current_time() -> string {
    // Locals:
    let _0: string // _0 // return

    bb0: {
        _0 = const "now";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.bare_and_pinned() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: baml.AnyFunction<Returns = string | Doc[], Throws = ToolError> // g

    bb0: {
        _1 = const fn user.web_search;
        _0 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.heterogeneous_tool_map() -> map<string, baml.AnyFunction<Returns = string | Doc[], Throws = ToolError>> {
    // Locals:
    let _0: map<string, baml.AnyFunction<Returns = string | Doc[], Throws = ToolError>> // _0 // return

    bb0: {
        _0 = { const "search": const fn user.web_search, const "now": const fn user.current_time }: map<string, baml.AnyFunction<Returns = Doc[] | string, Throws = ToolError>>;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.signature_access(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: baml.AnyFunction<Returns = unknown, Throws = unknown> // f // param
    let _2: baml.reflect.Signature // sig
    let _3: string // parts
    let _4: string
    let _5: string
    let _6: (baml.TypeValue) -> string throws never
    let _7: string
    let _8: (baml.TypeValue) -> string throws never
    let _9: string
    let _10: int
    let _11: (baml.reflect.Arg[]) -> int throws never
    let _12: type
    let _13: baml.reflect.Arg[]
    let _14: baml.iter.Iterator<Error = never, Item = baml.reflect.Arg>
    let _15: unknown
    let _16: bool
    let _17: baml.reflect.Arg
    let _18: baml.reflect.Arg // arg
    let _19: string
    let _20: string
    let _21: string
    let _22: string
    let _23: (baml.TypeValue) -> string throws never
    let _24: string[]
    let _25: (map<string, baml.reflect.Arg>) -> string[] throws never
    let _26: type
    let _27: type
    let _28: baml.iter.Iterator<Error = never, Item = string>
    let _29: unknown
    let _30: bool
    let _31: string
    let _32: string // key
    let _33: null | baml.reflect.Arg // opt
    let _34: (map<string, baml.reflect.Arg>, string) -> null | baml.reflect.Arg throws never
    let _35: string
    let _36: type
    let _37: type
    let _38: bool
    let _39: null | baml.reflect.Arg
    let _40: bool
    let _41: string
    let _42: string
    let _43: string
    let _44: string
    let _45: (baml.TypeValue) -> string throws never

    bb0: {
        _2 = call const fn baml.reflect.signature(copy _1) -> [bb1];
    }

    bb1: {
        _6 = copy _2.3;
        _5 = call const fn baml.TypeValue.baml.ToString.to_string(copy _6) -> [bb2];
    }

    bb2: {
        _8 = copy _2.4;
        _7 = call const fn baml.TypeValue.baml.ToString.to_string(copy _8) -> [bb3];
    }

    bb3: {
        _4 = copy _5 + copy _7;
        _11 = copy _2.1;
        _10 = len(_11);
        goto -> bb4;
    }

    bb4: {
        _12 = load_type(int);
        _9 = call const fn baml.String.from<copy _12>(copy _10) -> [bb5];
    }

    bb5: {
        _3 = copy _4 + copy _9;
        _13 = copy _2.1;
        _14 = virtual_call iter as baml.iter.Iterable<Error = never, Item = baml.reflect.Arg>(copy _13) -> [bb6];
    }

    bb6: {
        _15 = virtual_call next as baml.iter.Iterator<Error = never, Item = baml.reflect.Arg>(copy _14) -> [bb7];
    }

    bb7: {
        _16 = is_type(copy _15, baml.iter.Done);
        branch copy _16 -> [bb10, bb8];
    }

    bb8: {
        _17 = copy _15;
        fresh_cell(_18);
        _18 = copy _17;
        _20 = copy _3;
        _21 = copy _18.0;
        _19 = copy _20 + copy _21;
        _23 = copy _18.1;
        _22 = call const fn baml.TypeValue.baml.ToString.to_string(copy _23) -> [bb9];
    }

    bb9: {
        _3 = copy _19 + copy _22;
        goto -> bb6;
    }

    bb10: {
        _25 = copy _2.2;
        _26 = load_type(string);
        _27 = load_type(baml.reflect.Arg);
        _24 = call const fn baml.Map.keys<copy _26, copy _27>(copy _25) -> [bb11];
    }

    bb11: {
        _28 = virtual_call iter as baml.iter.Iterable<Error = never, Item = string>(copy _24) -> [bb12];
    }

    bb12: {
        _29 = virtual_call next as baml.iter.Iterator<Error = never, Item = string>(copy _28) -> [bb13];
    }

    bb13: {
        _30 = is_type(copy _29, baml.iter.Done);
        branch copy _30 -> [bb19, bb14];
    }

    bb14: {
        _31 = copy _29;
        fresh_cell(_32);
        _32 = copy _31;
        _34 = copy _2.2;
        _35 = copy _32;
        _36 = load_type(string);
        _37 = load_type(baml.reflect.Arg);
        _33 = call const fn baml.Map.get<copy _36, copy _37>(copy _34, copy _35) -> [bb15];
    }

    bb15: {
        _39 = copy _33;
        _40 = call const fn baml.ops.equals_equals(copy _39, const null) -> [bb16];
    }

    bb16: {
        _38 = !copy _40;
        branch copy _38 -> [bb17, bb12];
    }

    bb17: {
        _42 = copy _3;
        _43 = copy _32;
        _41 = copy _42 + copy _43;
        _45 = copy _33.1;
        _44 = call const fn baml.TypeValue.baml.ToString.to_string(copy _45) -> [bb18];
    }

    bb18: {
        _3 = copy _41 + copy _44;
        goto -> bb12;
    }

    bb19: {
        _0 = copy _3;
        goto -> bb20;
    }

    bb20: {
        return;
    }
}

fn user.typed_dispatch(name: string, args: map<string, unknown>) -> string | Doc[] {
    // Locals:
    let _0: string | Doc[] // _0 // return
    let _1: string // name // param
    let _2: map<string, unknown> // args // param
    let _3: map<string, baml.AnyFunction<Returns = string | Doc[], Throws = ToolError>> // tools
    let _4: null | baml.AnyFunction<Returns = string | Doc[], Throws = ToolError> // f
    let _5: type
    let _6: type
    let _7: bool
    let _8: bool
    let _9: ToolError // e
    let _10: baml.AnyFunction<Returns = string | Doc[], Throws = ToolError>
    let _11: type
    let _12: type
    let _13: bool
    let _14: bool
    let _15: string

    bb0: {
        _3 = call const fn user.heterogeneous_tool_map() -> [bb1];
    }

    bb1: {
        _5 = load_type(string);
        _6 = load_type(baml.AnyFunction<Returns = Doc[] | string, Throws = ToolError>);
        _4 = call const fn baml.Map.get<copy _5, copy _6>(copy _3, copy _1) -> [bb2];
    }

    bb2: {
        _8 = copy _4 == const null;
        branch copy _8 -> [bb4, bb3];
    }

    bb3: {
        _7 = const false;
        goto -> bb5;
    }

    bb4: {
        _7 = const true;
        goto -> bb5;
    }

    bb5: {
        branch copy _7 -> [bb7, bb6];
    }

    bb6: {
        _10 = copy _4;
        _11 = load_type(Doc[] | string);
        _12 = load_type(ToolError);
        _0 = call const fn baml.reflect.call_any<copy _11, copy _12>(copy _10, copy _2) -> [bb13, unwind: bb8];
    }

    bb7: {
        _0 = const "no-such-tool";
        goto -> bb13;
    }

    bb8: {
        _13 = is_type(copy _9, ToolError);
        branch copy _13 -> [bb12, bb9];
    }

    bb9: {
        _14 = is_type(copy _9, baml.reflect.InvalidArgumentError);
        branch copy _14 -> [bb11, bb10];
    }

    bb10: {
        rethrow copy _9;
    }

    bb11: {
        _0 = const "bad-args";
        goto -> bb13;
    }

    bb12: {
        _15 = copy _9.0;
        _0 = const "tool-error:" + copy _15;
        goto -> bb13;
    }

    bb13: {
        return;
    }
}
