baml_language/crates/baml_tests/snapshots/compiles/anyfunction_reflect/baml_tests__compiles__anyfunction_reflect__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.ToolError {
  message: string
}
class user.Doc {
  title: string
}
function user.web_search(q: string) -> user.Doc[] throws user.ToolError {
  { : never
    if (q == "boom" : bool) : void
      { : never
        throw ToolError { message: "no results" } : user.ToolError
      }
    return [Doc { title: q }] : user.Doc[]
  }
}
function user.current_time() -> string throws never {
  { : never
    return "now" : "now"
  }
}
function user.bare_and_pinned() -> int throws never {
  { : never
    let f: baml.AnyFunction = web_search : (q: string) -> user.Doc[] throws user.ToolError -> baml.AnyFunction<Returns = unknown, Throws = unknown>
    let g: baml.AnyFunction<Returns = Doc[] | string, Throws = ToolError> = web_search : (q: string) -> user.Doc[] throws user.ToolError -> baml.AnyFunction<Returns = user.Doc[] | string, Throws = user.ToolError>
    let widened: baml.AnyFunction<Returns = Doc[] | string | int, Throws = ToolError> = g : baml.AnyFunction<Returns = user.Doc[] | string, Throws = user.ToolError> -> baml.AnyFunction<Returns = user.Doc[] | string | int, Throws = user.ToolError>
    let bare: baml.AnyFunction = g : baml.AnyFunction<Returns = user.Doc[] | string, Throws = user.ToolError> -> baml.AnyFunction<Returns = unknown, Throws = unknown>
    return 0 : 0
  }
}
function user.heterogeneous_tool_map() -> map<string, baml.AnyFunction<Returns = user.Doc[] | string, Throws = user.ToolError>> throws never {
  { : never
    return map { "search": web_search, "now": current_time } : map<string, baml.AnyFunction<Returns = user.Doc[] | string, Throws = user.ToolError>>
  }
}
function user.signature_access(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> string throws never {
  { : never
    let sig = reflect.signature(f) : reflect.Signature
    let parts = sig.returns.to_string() + sig.errors.to_string() + sig.args.length().to_string() : string
    for arg in sig.args
      { : void
        parts = parts + arg.name + arg.type.to_string() : string
      }
    for key in sig.opts.keys()
      { : void
        let opt = sig.opts.get(key) : reflect.Arg | null
        if (opt != null : bool) : void
          { : void
            parts = parts + key + opt.type.to_string() : string
          }
      }
    return parts : string
  }
}
function user.typed_dispatch(name: string, args: map<string, unknown>) -> user.Doc[] | string throws never {
  { : never
    let tools = heterogeneous_tool_map() : map<string, baml.AnyFunction<Returns = user.Doc[] | string, Throws = user.ToolError>>
    let f = tools.get(name) : baml.AnyFunction<Returns = user.Doc[] | string, Throws = user.ToolError> | null
    if (f is null : bool) : void
      { : never
        return "no-such-tool" : "no-such-tool"
      }
    return : user.Doc[] | string | "bad-args"
      catch (reflect.call_any<R, E>(f, args) : user.Doc[] | string) : user.Doc[] | string | "bad-args"
        catch (e)
          ToolError =>
            "tool-error:" + e.message : string
          reflect.InvalidArgumentError =>
            "bad-args" : "bad-args"
  }
}
class user.ToolError$stream {
  message: string | null
}
class user.Doc$stream {
  title: string | null
}
