baml_language/crates/baml_tests/snapshots/compiles/anyfunction_reflect/baml_tests__compiles__anyfunction_reflect__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0003

  × unresolved name: `openai.OpenAiClient.new`
    ╭─[main.baml:79:28]
 79 │ client RuntimeEnumClient = openai.OpenAiClient.new(
    ·                            ───────────────────────
    ╰────
