baml_language/crates/baml_tests/snapshots/compiles/anyfunction_reflect/baml_tests__compiles__anyfunction_reflect__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = #0, Throws = #1>, args: map<string, unknown>) -> #0 {
}

function reflect.signature(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> reflect.Signature {
}

function user.bare_and_pinned() -> int {
    load_const user.web_search
    store_var g
    load_const 0
    return
}

function user.current_time() -> string {
    load_const "now"
    return
}

function user.heterogeneous_tool_map() -> map<string, baml.AnyFunction<Returns = Doc[] | string, Throws = ToolError>> {
    load_const user.web_search
    load_const user.current_time
    load_const "search"
    load_const "now"
    load_type string
    load_type baml.AnyFunction<Returns = Doc[] | string, Throws = ToolError>
    alloc_map 2
    return
}

function user.signature_access(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> string {
    load_var f
    call reflect.signature
    store_var sig
    load_var sig
    load_field .returns
    call baml.TypeValue.baml.ToString.to_string
    store_var _5
    load_var sig
    load_field .errors
    call baml.TypeValue.baml.ToString.to_string
    store_var _7
    load_var sig
    load_field .args
    container_len
    store_var _10
    load_type int
    load_var _10
    call baml.String.from
    store_var _9
    load_var2 4 5
    bin_op +
    load_var _9
    bin_op +
    store_var parts
    load_var sig
    load_field .args
    load_type baml.iter.Iterable<Error = never, Item = reflect.Arg>
    load_const "iter"
    virtual_call nargs=1 ntypeargs=0
    store_var _14

  L0:
    load_var _14
    load_type baml.iter.Iterator<Error = never, Item = reflect.Arg>
    load_const "next"
    virtual_call nargs=1 ntypeargs=0
    store_var _15
    load_var _15
    is_type baml.iter.Done
    pop_jump_if_false L1
    jump L2

  L1:
    load_var _15
    store_var arg
    load_var2 3 10
    load_field .name
    bin_op +
    store_var _19
    load_var arg
    load_field .type
    call baml.TypeValue.baml.ToString.to_string
    store_var _22
    load_var2 11 12
    bin_op +
    store_var parts
    jump L0

  L2:
    load_type string
    load_type reflect.Arg
    load_var sig
    load_field .opts
    call baml.Map.keys
    load_type baml.iter.Iterable<Error = never, Item = string>
    load_const "iter"
    virtual_call nargs=1 ntypeargs=0
    store_var _28

  L3:
    load_var _28
    load_type baml.iter.Iterator<Error = never, Item = string>
    load_const "next"
    virtual_call nargs=1 ntypeargs=0
    store_var _29
    load_var _29
    is_type baml.iter.Done
    pop_jump_if_false L4
    jump L5

  L4:
    load_var _29
    store_var key
    load_type string
    load_type reflect.Arg
    load_var sig
    load_field .opts
    load_var key
    call baml.Map.get
    store_var opt
    load_var opt
    load_const null
    call baml.ops.equals_equals
    unary_op !
    pop_jump_if_false L3
    load_var2 3 15
    bin_op +
    store_var _41
    load_var opt
    load_field .1
    call baml.TypeValue.baml.ToString.to_string
    store_var _44
    load_var2 17 18
    bin_op +
    store_var parts
    jump L3

  L5:
    load_var parts
    return
}

function user.typed_dispatch(name: string, args: map<string, unknown>) -> Doc[] | string {
    call user.heterogeneous_tool_map
    store_var tools
    load_type string
    load_type baml.AnyFunction<Returns = Doc[] | string, Throws = ToolError>
    load_var2 3 1
    call baml.Map.get
    store_var f
    load_var f
    load_const null
    cmp_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    load_const false
    jump L2

  L1:
    load_const true

  L2:
    pop_jump_if_false L3
    jump L8

  L3:
    load_type Doc[] | string
    load_type ToolError
    load_var2 4 2
    call reflect.call_any
    jump L9
    load_var e
    is_type ToolError
    pop_jump_if_false L4
    jump L7

  L4:
    load_var e
    is_type reflect.InvalidArgumentError
    pop_jump_if_false L5
    jump L6

  L5:
    load_var e
    rethrow

  L6:
    load_const "bad-args"
    jump L9

  L7:
    load_const "tool-error:"
    load_var e
    load_field .message
    bin_op +
    jump L9

  L8:
    load_const "no-such-tool"

  L9:
    return
}

function user.web_search(q: string) -> Doc[] {
    load_var q
    load_const "boom"
    cmp_op ==
    pop_jump_if_false L0
    jump L1

  L0:
    load_var q
    init_instance user.Doc .title
    load_type Doc
    alloc_array 1
    return

  L1:
    load_const "no results"
    init_instance user.ToolError .message
    throw
}
